--- a/views/main.ejs
+++ b/views/main.ejs
@@ -28,17 +28,24 @@
               <%= rank %>, <%= points %> points
             </span>
       </div>
-      
-     
+
+
     </div>
     <a id="notification" href="shop">
-      
-      <svg id="notification-icon" width="32" height="32"   viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.0001 8.12303C5.0001 6.15872 3.66323 4.44649 1.75757 3.97007L2.24264 2.02979C4.62232 2.62471 6.39749 4.53307 6.87337 6.86502L7.70728 6.74589C11.2143 6.24489 14.7724 6.21368 18.2877 6.65309L19.2192 6.76953C20.8079 6.96812 22.0001 8.31863 22.0001 9.9197V10.3984C22.0001 12.2645 21.5656 14.1049 20.7311 15.774C20.0624 17.1114 18.7942 18.048 17.3194 18.2938L16.6458 18.4061C14.2246 18.8096 11.7501 18.7697 9.34316 18.2883C8.06941 18.0336 6.98462 17.205 6.40371 16.0432L6.28869 15.8132C5.44128 14.1183 5.0001 12.2495 5.0001 10.3546V8.12303Z" fill="white"/>
-        <path d="M6.375 19.75C6.45614 19.5877 6.58772 19.4561 6.75 19.375C7.22214 19.1389 7.77786 19.1389 8.25 19.375C8.41228 19.4561 8.54386 19.5877 8.625 19.75C8.86107 20.2221 8.86107 20.7779 8.625 21.25C8.54386 21.4123 8.41228 21.5439 8.25 21.625C7.77786 21.8611 7.22214 21.8611 6.75 21.625C6.58772 21.5439 6.45614 21.4123 6.375 21.25C6.13893 20.7779 6.13893 20.2221 6.375 19.75Z" fill="white"/>
-        <path d="M17.75 19.375C17.5877 19.4561 17.4561 19.5877 17.375 19.75C17.1389 20.2221 17.1389 20.7779 17.375 21.25C17.4561 21.4123 17.5877 21.5439 17.75 21.625C18.2221 21.8611 18.7779 21.8611 19.25 21.625C19.4123 21.5439 19.5439 21.4123 19.625 21.25C19.8611 20.7779 19.8611 20.2221 19.625 19.75C19.5439 19.5877 19.4123 19.4561 19.25 19.375C18.7779 19.1389 18.2221 19.1389 17.75 19.375Z" fill="white"/>
-        </svg>
-    
+
+      <svg id="notification-icon" width="32" height="32" viewBox="0 0 24 24" fill="white"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M5.0001 8.12303C5.0001 6.15872 3.66323 4.44649 1.75757 3.97007L2.24264 2.02979C4.62232 2.62471 6.39749 4.53307 6.87337 6.86502L7.70728 6.74589C11.2143 6.24489 14.7724 6.21368 18.2877 6.65309L19.2192 6.76953C20.8079 6.96812 22.0001 8.31863 22.0001 9.9197V10.3984C22.0001 12.2645 21.5656 14.1049 20.7311 15.774C20.0624 17.1114 18.7942 18.048 17.3194 18.2938L16.6458 18.4061C14.2246 18.8096 11.7501 18.7697 9.34316 18.2883C8.06941 18.0336 6.98462 17.205 6.40371 16.0432L6.28869 15.8132C5.44128 14.1183 5.0001 12.2495 5.0001 10.3546V8.12303Z"
+          fill="white" />
+        <path
+          d="M6.375 19.75C6.45614 19.5877 6.58772 19.4561 6.75 19.375C7.22214 19.1389 7.77786 19.1389 8.25 19.375C8.41228 19.4561 8.54386 19.5877 8.625 19.75C8.86107 20.2221 8.86107 20.7779 8.625 21.25C8.54386 21.4123 8.41228 21.5439 8.25 21.625C7.77786 21.8611 7.22214 21.8611 6.75 21.625C6.58772 21.5439 6.45614 21.4123 6.375 21.25C6.13893 20.7779 6.13893 20.2221 6.375 19.75Z"
+          fill="white" />
+        <path
+          d="M17.75 19.375C17.5877 19.4561 17.4561 19.5877 17.375 19.75C17.1389 20.2221 17.1389 20.7779 17.375 21.25C17.4561 21.4123 17.5877 21.5439 17.75 21.625C18.2221 21.8611 18.7779 21.8611 19.25 21.625C19.4123 21.5439 19.5439 21.4123 19.625 21.25C19.8611 20.7779 19.8611 20.2221 19.625 19.75C19.5439 19.5877 19.4123 19.4561 19.25 19.375C18.7779 19.1389 18.2221 19.1389 17.75 19.375Z"
+          fill="white" />
+      </svg>
+
     </a>
   </div>
 
@@ -57,7 +64,7 @@
             <% } else { %>
               <% fitTasks.forEach(function(task) { %>
                 <div class="task-item">
-                  
+
                   <div class="task-icon-container">
                     <svg class="task-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
@@ -74,12 +81,14 @@
                   </div>
                   <%= task %>
                     <div class="view-task">
-                      <svg class="view-task-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
+                      <a href="/fitTasks" class="button-link">
+                        <svg class="view-task-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          <path fill-rule="evenodd" clip-rule="evenodd"
                           d="M13.5691 7.15628C15.5245 10.0893 15.5245 13.9103 13.5691 16.8433C13.415 17.0746 13.1968 17.2561 12.9413 17.3656L6.60609 20.0807L7.39393 21.9189L13.7292 19.2038C14.3413 18.9415 14.8638 18.5068 15.2332 17.9527C17.6364 14.3479 17.6364 9.65168 15.2332 6.04688C14.8638 5.49278 14.3413 5.05808 13.7292 4.79576L7.39393 2.08065L6.60609 3.91895L12.9413 6.63405C13.1968 6.74354 13.415 6.92499 13.5691 7.15628Z"
                           fill="#FF8624" />
-                      </svg>
+                        </svg>
+                      </a>
                     </div>
                 </div>
                 <% }); %>
@@ -109,12 +118,14 @@
                   </div>
                   <%= task %>
                     <div class="view-task">
-                      <svg class="view-task-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M13.5691 7.15628C15.5245 10.0893 15.5245 13.9103 13.5691 16.8433C13.415 17.0746 13.1968 17.2561 12.9413 17.3656L6.60609 20.0807L7.39393 21.9189L13.7292 19.2038C14.3413 18.9415 14.8638 18.5068 15.2332 17.9527C17.6364 14.3479 17.6364 9.65168 15.2332 6.04688C14.8638 5.49278 14.3413 5.05808 13.7292 4.79576L7.39393 2.08065L6.60609 3.91895L12.9413 6.63405C13.1968 6.74354 13.415 6.92499 13.5691 7.15628Z"
-                          fill="#FF8624" />
-                      </svg>
+                      <a href="/dietTasks" class="button-link">
+                        <svg class="view-task-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
+                          xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M13.5691 7.15628C15.5245 10.0893 15.5245 13.9103 13.5691 16.8433C13.415 17.0746 13.1968 17.2561 12.9413 17.3656L6.60609 20.0807L7.39393 21.9189L13.7292 19.2038C14.3413 18.9415 14.8638 18.5068 15.2332 17.9527C17.6364 14.3479 17.6364 9.65168 15.2332 6.04688C14.8638 5.49278 14.3413 5.05808 13.7292 4.79576L7.39393 2.08065L6.60609 3.91895L12.9413 6.63405C13.1968 6.74354 13.415 6.92499 13.5691 7.15628Z"
+                            fill="#FF8624" />
+                        </svg>
+                      </a>
                     </div>
                 </div>
                 <% }); %>
@@ -366,50 +377,50 @@
 
   <div id="training-plan">Training Plan & AI Recommendation</div>
   <div id="training-card-container" class="card-container carousel slide pointer-event" data-bs-ride="carousel">
-      <div id="ai-rec-initiate" class="training-card">
-        <!-- Card 1 content -->
-        <h2 class="training-plan-text">Get Started</h2>
-        <div id="start-training-plan">
-          <svg class="start-training-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M9.40994 4.60259L9.56599 4.6416C13.0626 5.51575 16.1078 7.66179 18.1071 10.6607C18.6478 11.4718 18.6478 12.5285 18.1071 13.3396C16.1078 16.3384 13.0626 18.4845 9.56599 19.3586L9.40994 19.3976C8.07899 19.7304 6.7303 18.9212 6.39756 17.5902L6.20004 16.8001C5.41216 13.6486 5.41216 10.3516 6.20004 7.20011L6.39756 6.41001C6.7303 5.07906 8.07899 4.26985 9.40994 4.60259Z"
-              fill="white" />
-          </svg>
-        </div>
+    <div id="ai-rec-initiate" class="training-card">
+      <!-- Card 1 content -->
+      <h2 class="training-plan-text">Get Started</h2>
+      <div id="start-training-plan">
+        <svg class="start-training-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M9.40994 4.60259L9.56599 4.6416C13.0626 5.51575 16.1078 7.66179 18.1071 10.6607C18.6478 11.4718 18.6478 12.5285 18.1071 13.3396C16.1078 16.3384 13.0626 18.4845 9.56599 19.3586L9.40994 19.3976C8.07899 19.7304 6.7303 18.9212 6.39756 17.5902L6.20004 16.8001C5.41216 13.6486 5.41216 10.3516 6.20004 7.20011L6.39756 6.41001C6.7303 5.07906 8.07899 4.26985 9.40994 4.60259Z"
+            fill="white" />
+        </svg>
       </div>
-      <div class="training-card individual-plan">
-        <!-- Card 2 content -->
-        <h2>Chest Exercise</h2>
-        <div id="chest" class="body-part">
-        </div>
+    </div>
+    <div class="training-card individual-plan">
+      <!-- Card 2 content -->
+      <h2>Chest Exercise</h2>
+      <div id="chest" class="body-part">
       </div>
-      <div class="training-card individual-plan">
-        <!-- Card 2 content -->
-        <h2>Back Exercise</h2>
-        <div id="back" class="body-part"></div>
-      </div>
-      <div class="training-card individual-plan">
-        <!-- Card 2 content -->
-        <h2>Light Cardio</h2>
-        <div id="light-cardio" class="body-part"></div>
-      </div>
+    </div>
+    <div class="training-card individual-plan">
+      <!-- Card 2 content -->
+      <h2>Back Exercise</h2>
+      <div id="back" class="body-part"></div>
+    </div>
+    <div class="training-card individual-plan">
+      <!-- Card 2 content -->
+      <h2>Light Cardio</h2>
+      <div id="light-cardio" class="body-part"></div>
+    </div>
 
-      <div class="training-card individual-plan">
-        <!-- Card 2 content -->
-        <h2>Intensive Cardio</h2>
-        <div id="intensive-cardio" class="body-part"></div>
-      </div>
-      <div class="training-card individual-plan">
-        <!-- Card 2 content -->
-        <h2>Boxing - Basics</h2>
-        <div id="basic-boxing" class="body-part"></div>
-      </div>
-      <div class="training-card individual-plan">
-        <!-- Card 2 content -->
-        <h2>Agility Training</h2>
-        <div id="agility" class="body-part"></div>
-      </div>
+    <div class="training-card individual-plan">
+      <!-- Card 2 content -->
+      <h2>Intensive Cardio</h2>
+      <div id="intensive-cardio" class="body-part"></div>
+    </div>
+    <div class="training-card individual-plan">
+      <!-- Card 2 content -->
+      <h2>Boxing - Basics</h2>
+      <div id="basic-boxing" class="body-part"></div>
+    </div>
+    <div class="training-card individual-plan">
+      <!-- Card 2 content -->
+      <h2>Agility Training</h2>
+      <div id="agility" class="body-part"></div>
+    </div>
   </div>
 
   <div id="diet-nutrition">Diet & Nutrition</div>
@@ -476,7 +487,7 @@
             <% }); %>
         </table>
         <div class="firework" id="firework1" style="top: 20%; left: 20%;"></div>
-      <div class="firework" id="firework2" style="top: 40%; left: 40%;"></div>
+        <div class="firework" id="firework2" style="top: 40%; left: 40%;"></div>
       </div>
     </div>
   </div>
@@ -493,5 +504,5 @@
 
 
 
-    <!-- Footer -->
-    <%- include("templates/footer") %>
+  <!-- Footer -->
+  <%- include("templates/footer") %>
