--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -107,7 +107,7 @@
         }
 
     .back-button:hover {
-        background-color: #e55a50;
+        background-color: #eb6629;
         }
         #go-back {
             display:block;
