Clean up repo and update README file

--- a/styles/ai-training-recommendation.css
+++ b/styles/ai-training-recommendation.css
@@ -74,6 +74,12 @@ footer {
     border-radius: 25px;
 }
 
+#plus-icon {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 15%;
+}
 
 #diet-user {
     height: 130px;
