--- a/styles/aichat-log.css
+++ b/styles/aichat-log.css
@@ -10,7 +10,7 @@ body {
     left: 20px;
     top: 50px;
     background-color: rgb(221, 218, 218);
-    /* opacity: 0.6; */
+    opacity: 0.6;
     border-radius: 20px;
     width: 60px;
     height: 60px;
@@ -28,7 +28,7 @@ body {
     position: absolute;
     right: 20px;
     top: 50px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(221, 218, 218);
     opacity: 0.5;
     border-radius: 20px;
     width: 60px;
@@ -37,10 +37,9 @@ body {
 
 #setting-icon {
     position: absolute;
-    left:5px;
-    top:5px;
-    width:50px;
-    height:50px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 15px;
     
 }
 
@@ -187,7 +186,7 @@ footer {
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
     border-bottom-left-radius: 40px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     text-align: right;
 }
 
