--- a/styles/body-motion-capture.css
+++ b/styles/body-motion-capture.css
@@ -24,6 +24,10 @@ body {
     height: 180px;
 }
 
+#camera-feed {
+  position: absolute;
+  top: 400px;
+}
 #home-weight {
     height: 180px;
     width: 260px;
@@ -81,7 +85,7 @@ body {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 25%;
+    top: 18%;
 }
 
 #diet-user {
@@ -151,8 +155,7 @@ body {
   position: absolute;
   left: 20px;
   top: 50px;
-  background-color: rgb(221, 218, 218);
-  opacity: 0.4;
+  background-color: rgba(221, 218, 218, 0.6); 
   border-radius: 40px;
   width: 100px;
   height: 100px;
@@ -160,22 +163,28 @@ body {
 
 #go-back-icon {
   position: absolute;
-  left: 40px;
-  top: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 25%;
 }
 
 #setting {
   position: absolute;
   right: 20px;
   top: 50px;
-  background-color: rgb(221, 218, 218);
-  opacity: 0.4;
+  background-color: rgba(221, 218, 218, 0.6); 
   border-radius: 40px;
   width: 100px;
   height: 100px;
 }
 
-
+#setting-icon {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 25%;
+  opacity: 1;
+}
 
 #instruction {
   margin: 40px 20px;
