--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -25,7 +25,7 @@
       </svg>
     </a>
   </div>
-  <a id="plus" href="/body-motion-capture">
+  <a id="plus" href="/ai-training-scan-request">
          <img id="plus-icon" src="/img/body-scan-icon.png" alt="...">
   </a>
   <div id="fill"></div>
