--- a/styles/aichat-log.css
+++ b/styles/aichat-log.css
@@ -9,8 +9,7 @@ body {
     position: absolute;
     left: 20px;
     top: 50px;
-    background-color: rgb(221, 218, 218);
-    opacity: 0.6;
+    background-color: rgba(221, 218, 218, 0.6);
     border-radius: 20px;
     width: 60px;
     height: 60px;
@@ -28,8 +27,7 @@ body {
     position: absolute;
     right: 20px;
     top: 50px;
-    background-color: rgb(221, 218, 218);
-    opacity: 0.5;
+    background-color: rgba(221, 218, 218, 0.6);
     border-radius: 20px;
     width: 60px;
     height: 60px;
