--- a/styles/main.css
+++ b/styles/main.css
@@ -568,9 +568,7 @@ footer {
     width: 60px;
     height: 60px;
     border-radius: 20px;
-    background-color: rgb(0, 0, 0);
-    opacity: 0.4;
-    z-index: -0;
+    background-color: rgba(48, 47, 47, 0.6);
 }
 
 #notification-icon {
