--- a/styles/body-motion-capture.css
+++ b/styles/body-motion-capture.css
@@ -5,6 +5,7 @@ body {
   }
 
   main {
+    padding-top: 100px;
     padding-bottom: 200px;
   }
 
@@ -22,6 +23,11 @@ body {
     bottom: -40px;
     width: 100%;
     height: 180px;
+}
+
+#camera-feed {
+  width: 0;
+  height: 0;
 }
 
 #home-weight {
@@ -81,7 +87,7 @@ body {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 25%;
+    top: 18%;
 }
 
 #diet-user {
@@ -151,7 +157,7 @@ body {
   position: absolute;
   left: 20px;
   top: 50px;
-  background-color: rgb(221, 218, 218);
+  background-color: rgba(221, 218, 218, 0.6);
   opacity: 0.4;
   border-radius: 40px;
   width: 100px;
@@ -160,22 +166,29 @@ body {
 
 #go-back-icon {
   position: absolute;
-  left: 40px;
-  top: 70px;
+  left: 50%;
+   transform: translateX(-50%);
+   top: 25%;
 }
 
 #setting {
   position: absolute;
   right: 20px;
   top: 50px;
-  background-color: rgb(221, 218, 218);
+  background-color: rgba(221, 218, 218, 0.6);
   opacity: 0.4;
   border-radius: 40px;
   width: 100px;
   height: 100px;
 }
 
-
+#setting-icon {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 25%;
+  opacity: 1;
+}
 
 #instruction {
   margin: 40px 20px;
