--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,13 @@
 		<img src="/img/Logo.png" alt="logo" width="250" height="250">
 	</div>
 
-	<div class="login bg-light">
+	<div class="login">
 		<br>
-		<form action="/login" method="get" class="index-form">
+		<form id="login" action="/login" method="get" class="index-form">
 			<button type="submit" class="index-btn">Login</button>
 		</form>
 
-		<form action="/signup" method="get" class="index-form">
+		<form id="signup" action="/signup" method="get" class="index-form">
 			<button type="submit" class="index-btn">Signup</button>
 		</form>
 		<br>
