--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/header") %>
-	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
+	<link rel="stylesheet" type="text/css" href="/styles/change.css" text="">
 
 </head>
 
@@ -27,10 +27,10 @@
             <br>
             <h1 for="confirmNewPassword" class="resize">Confirm new password:</h1>
             <input type="password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Password" required>
-            <div class="button-container">
-                <button type="submit" class="index-btn increased-width">Reset Password</button>
-            </div>
         </form>
+        <div class="button-container">
+            <button type="submit" class="index-btn increased-width">Reset Password</button>
+        </div>
     <% } %>
 </div>
 
@@ -54,6 +54,5 @@
         align-items: center;
         gap: 10px; /* Adjust the space between buttons */
         margin-top: 20px; /* Adjust the top margin as needed */
-        margin-left: 195px;
     }
 </style>
