--- a/styles/style.css
+++ b/styles/style.css
@@ -1,93 +1,98 @@
 /* Universal styling for index, login, signup, reset-email, reset-password */
+body {
+	background-color: rgb(38, 36, 36);
+}
 .button {
-    border-radius: 25px;
-    margin-top: 20px;
-    width: 40%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    text-decoration: none;
-    margin-left: 125px;
-    margin-right: 810px;
-    color: black;
-    font-size: 40px;
-    background-color: #d4d5d6; 
-    border: none;
-    cursor: pointer;
-    transition-duration: 0.4s;
+	border-radius: 25px;
+	margin-top: 20px;
+	width: 40%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	text-decoration: none;
+	margin-left: 125px;
+	margin-right: 810px;
+	color: black;
+	font-size: 40px;
+	background-color: #d4d5d6;
+	border: none;
+	cursor: pointer;
+	transition-duration: 0.4s;
 }
 
 .shopitems {
-    font-size: 25pt;
+	font-size: 25pt;
 }
 
 .button:hover {
-    background-color: #9fa5a7;
+	background-color: #9fa5a7;
 }
 
 .title {
-  margin-top: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 250px; /* Ensure the height is set to match the image height */
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 250px; /* Ensure the height is set to match the image height */
 }
 
 .title img {
-  max-width: 100%;
-  max-height: 100%;
+	max-width: 100%;
+	max-height: 100%;
 }
 
-
 .custom-btn {
-    background-color: #FF8624;
-    color: #fff;    
+	background-color: #ff8624;
+	color: #fff;
 }
 
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
 }
 
 .login {
-    font-size: 30px;
+	font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .index-form {
-    padding: 12px 24px;
-    font-size: 16px;
-    
+    display: flex;
+    justify-content: center;
+	padding: 12px 24px;
+	font-size: 16px;
+    width: 100%;
 }
 
 .index-btn {
-    border-radius: 25px;
-    margin-top: 20px;
-    width: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    text-decoration: none;
-    margin-right: 200px;
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    background-color: #FF8624;
-    border: none;
-    cursor: pointer;
-    transition-duration: 0.4s;
+	border-radius: 25px;
+	margin-top: 20px;
+	width: 40%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: center;
+	text-decoration: none;
+	color: rgb(255, 255, 255);
+	font-size: 15px;
+	background-color: #ff8624;
+	border: none;
+	cursor: pointer;
+	transition-duration: 0.4s;
 }
 
 .task-nav {
-    padding-left: 10%;
-    padding-right: 10%;
-    height: 100%;
-    width: 80%;
-    display: flex; /* Use flexbox *
+	padding-left: 10%;
+	padding-right: 10%;
+	height: 100%;
+	width: 80%;
+	display: flex; /* Use flexbox *
     justify-content: space-between; /* Space items evenly */
 }
 
 .resize {
-    font-size: 15px;
-
+	font-size: 15px;
 }
