--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,5 @@
 <%- include("templates/header") %>
 	<link rel="stylesheet" type="text/css" href="/styles/change.css" text="">
-	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 	</head>
 
 	<div class="title" class="center">
@@ -8,23 +7,14 @@
 	</div>
 
 
-	<div class="login bg-light">
-		<br>
+	<div class="login">
 		<% if (input==1) { %>
 			<div class="alert alert-danger" role="alert">
 				<h5>Invalid Email or Password</h5>
 			</div>
 			<% } %>
-				<!-- Go Back button -->
-				<button type="button" class="index-btn top-left" style="margin-left: 10px;"
-					onclick="location.href='/';">
-					Go Back
-				</button>
 
-				<form action="/login" method="POST" class="index-form center">
-					<h1>Login</h1>
-
-
+				<form class="login" action="/login" method="POST" class="index-form center">
 					<% if (input==1) { %>
 						<input type="email" name="email" placeholder="Email" class="border">
 						<input type="password" name="password" placeholder="Password" class="border">
@@ -33,11 +23,12 @@
 							<input type="password" name="password" placeholder="Password">
 							<% } %>
 
-								<button type="submit" class="index-btn">Login</button>
+							<button type="submit" class="index-btn">Login</button>
 				</form>
+				
 				<br>
 				<form class="index-form center">
-					<a href="/reset-email" class="resize">Reset password</a>
+					<a href="/reset-email" class="resize" style="color: #FF8624;">Forget password?</a>
 				</form>
 	</div>
 	<%- include("templates/easteregg") %>
