--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,15 +1,12 @@
 <%- include("templates/header") %>
 	<link rel="stylesheet" type="text/css" href="/styles/change.css" text="">
-	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 	</head>
 
 	<div class="title" class="center">
 		<img src="/img/Logo.png" alt="logo" width="250" height="250">
 	</div>
 
-	<div class="login bg-light">
-		<br>
-
+	<div class="login">
 		<!-- Existing user/email pop-up message -->
 		<% if (typeof errorMessage !=='undefined' && errorMessage) { %>
 			<div class="alert alert-danger" role="alert">
@@ -19,28 +16,29 @@
 			</div>
 			<% } %>
 
-				<!-- Go Back button -->
-				<button type="button" class="index-btn top-left" style="margin-left: 10px;"
-					onclick="location.href='/';">
-					Go Back
-				</button>
 
-				<form action="/signup" method="POST" class="index-form center">
-					<h1>Sign Up</h1>
+				<form class="login" action="/signup" method="POST" class="index-form center">
 					<% if (typeof errorMessage !=='undefined' && errorMessage) { %>
 						<input type="text" name="username" placeholder="Username" class="border"
-							value="<%= typeof username !== 'undefined' ? username : '' %>"><br>
+							value="<%= typeof username !== 'undefined' ? username : '' %>">
 						<input type="email" name="email" placeholder="Email" class="border"
-							value="<%= typeof email !== 'undefined' ? email : '' %>"><br>
-						<input type="password" name="password" placeholder="Password" class="border"><br>
+							value="<%= typeof email !== 'undefined' ? email : '' %>">
+						<input type="password" name="password" placeholder="Password" class="border">
 						<% } else { %>
-							<input type="text" name="username" placeholder="Username"><br>
-							<input type="email" name="email" placeholder="Email"><br>
-							<input type="password" name="password" placeholder="Password"><br>
+							<input type="text" name="username" placeholder="Username">
+							<input type="email" name="email" placeholder="Email">
+							<input type="password" name="password" placeholder="Password">
 							<% } %>
-
-								<button type="submit" class="index-btn">Sign Up</button>
 				</form>
+
+				<div style="gap: 10%; width: 100%; display: flex; justify-content: center;">
+					<!-- Go Back button -->
+					<button type="button" class="index-btn top-left" style="margin-left: 10px; width: 35%;"
+						onclick="location.href='/';">
+						Cancel
+					</button>
+					<button type="submit" class="index-btn" style="width: 35%;">Sign Up</button>
+				</div>
 				<br>
 	</div>
 
