--- a/views/templates/easteregg.ejs
+++ b/views/templates/easteregg.ejs
@@ -22,17 +22,17 @@
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    padding: 5px 10px; /* Reduce padding */
-    font-size: 0.75rem; /* Reduce font size */
-    background-color: white;
-    color: white;
+    /* padding: 5px 10px;  */
+    /* font-size: 0.75rem; */
+    /* background-color: white;
+    color: white; */
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .konami-button:hover {
-    background-color: #d1d1d1;
+    /* background-color: #d1d1d1; */
 }
 
 </style>
